04_Teste/exercicios_gerados/question_mcg_5_identacao/version_3/full_program_output.txt
Traceback (most recent call last):
  File "<string>", line 3
    def __init__(self):
    ^
IndentationError: expected an indented block